--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,8 @@
             <li><a href="tel:{{cellPhone}}">Call Cell<br/>{{cellPhone}}</a></li>
             <li><a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a></li>
             <li><a href="#" class="add-location-btn">Add Location</a></li>
+            <li><a href="#" class="add-contact-btn">Add to Contacts</a></li>
+            <li><a href="#" class="change-pic-btn">Change Picture</a></li>
         </ul>
     </div>
 
@@ -40,6 +42,7 @@
 <script src="js/storage/memory-store.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="js/HomeView.js"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
 <script src="js/EmployeeView.js"></script>
 <script src="js/main.js"></script>
 
